# Projects

./: README.md
Chess-Game-master/: CMakeLists.txt  README.md
CyberSec/Fuzzing/: app.py  fuzz.py
CyberSec/Fuzzing/boofuzz-results/: run-2025-02-15T22-25-33.db  run-2025-02-15T22-27-11.db  run-2025-02-15T22-44-44.db  run-2025-02-15T22-55-24.db  run-2025-02-15T22-58-19.db  run-2025-02-15T23-01-13.db  run-2025-02-15T23-01-22.db  run-2025-02-15T23-01-44.db  run-2025-02-15T23-03-20.db  run-2025-02-15T23-26-21.db  run-2025-02-15T23-32-26.db  run-2025-02-15T23-32-35.db  run-2025-02-15T23-35-21.db  run-2025-02-15T23-37-13.db  run-2025-02-15T23-39-36.db  run-2025-02-15T23-41-06.db  run-2025-02-15T23-42-08.db  run-2025-02-15T23-42-50.db  run-2025-02-15T23-44-10.db  run-2025-02-15T23-44-42.db
CyberSec/KeyLogger/: keylogger.py
ECommerce/: README.md
ECommerce/backend/: .env  package.json  server.js
ECommerce/backend/models/: Order.js  Product.js  User.js
ECommerce/backend/routes/: auth.js  orders.js  products.js
ECommerce/frontend/mini-ecommerce/src/: App.jsx  main.jsx
EE/: CMakeLists.txt  README.md  main.cpp
EE/include/: Position.hpp
EE/include/buildings/: Building.hpp  Depot.hpp
EE/include/game/: Game.hpp
EE/include/npc/: Citizen.hpp  Unit.hpp
EE/include/ressources/: Ressource.hpp
EE/include/ressources/Trees/: Olk.hpp  Pine.hpp  Tree.hpp
EE/include/ressources/ores/: Ores.hpp
EE/src/buildings/: Building.cpp  Depot.cpp
EE/src/game/: Game.cpp
EE/src/npc/: Citizen.cpp  Unit.cpp
EE/src/ressources/: Ressource.cpp
EE/src/ressources/Trees/: Olk.cpp  Pine.cpp  Tree.cpp
Graphes/Djikstra/: .gitignore  Astar.cpp  Dijkstra.py  Djikstra.cpp  main.cpp  queue.cpp  trie  trie.cpp
Plague/: CMakeLists.txt
Plague/Documentation/Network/: CityConnection.txt  Network.txt
Plague/Documentation/Virus/: BaseVirus.txt
Plague/include/city/: BaseCity.hpp
Plague/include/network/: CityConnection.hpp  Network.hpp
Plague/include/virus/: BaseVirus.hpp
Plague/src/: main.cpp
Plague/src/city/: BaseCity.cpp
Plague/src/network/: CityConnection.cpp
Plague/src/virus/: BaseVirus.cpp
Snake/: config.py  snake_game.py
